; ModuleID = '/home/carl/AnghaBench/linux/drivers/staging/rtl8712/extr_rtl8712_xmit.c_r8712_xmit_direct.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/staging/rtl8712/extr_rtl8712_xmit.c_r8712_xmit_direct.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct._adapter = type { i32 }
%struct.xmit_frame = type { i32* }

@_SUCCESS = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @r8712_xmit_direct(%struct._adapter* %0, %struct.xmit_frame* %1) #0 {
  %3 = alloca %struct._adapter*, align 8
  %4 = alloca %struct.xmit_frame*, align 8
  %5 = alloca i32, align 4
  store %struct._adapter* %0, %struct._adapter** %3, align 8
  store %struct.xmit_frame* %1, %struct.xmit_frame** %4, align 8
  %6 = load %struct._adapter*, %struct._adapter** %3, align 8
  %7 = load %struct.xmit_frame*, %struct.xmit_frame** %4, align 8
  %8 = getelementptr inbounds %struct.xmit_frame, %struct.xmit_frame* %7, i32 0, i32 0
  %9 = load i32*, i32** %8, align 8
  %10 = load %struct.xmit_frame*, %struct.xmit_frame** %4, align 8
  %11 = call i32 @r8712_xmitframe_coalesce(%struct._adapter* %6, i32* %9, %struct.xmit_frame* %10)
  store i32 %11, i32* %5, align 4
  %12 = load %struct.xmit_frame*, %struct.xmit_frame** %4, align 8
  %13 = getelementptr inbounds %struct.xmit_frame, %struct.xmit_frame* %12, i32 0, i32 0
  store i32* null, i32** %13, align 8
  %14 = load i32, i32* %5, align 4
  %15 = load i32, i32* @_SUCCESS, align 4
  %16 = icmp eq i32 %14, %15
  br i1 %16, label %17, label %21

17:                                               ; preds = %2
  %18 = load %struct._adapter*, %struct._adapter** %3, align 8
  %19 = load %struct.xmit_frame*, %struct.xmit_frame** %4, align 8
  %20 = call i32 @dump_xframe(%struct._adapter* %18, %struct.xmit_frame* %19)
  br label %21

21:                                               ; preds = %17, %2
  ret void
}

declare dso_local i32 @r8712_xmitframe_coalesce(%struct._adapter*, i32*, %struct.xmit_frame*) #1

declare dso_local i32 @dump_xframe(%struct._adapter*, %struct.xmit_frame*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
